# featureflag

./: Cargo.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust.yml
featureflag/: Cargo.toml
featureflag-test/: Cargo.toml
featureflag-test-macros/: Cargo.toml
featureflag-test-macros/src/: lib.rs  utils.rs  with_features.rs
featureflag-test/src/: lib.rs
featureflag-test/tests/: macro.rs
featureflag/examples/: basic.rs
featureflag/src/: context.rs  evaluator.rs  extensions.rs  feature.rs  fields.rs  lib.rs  utils.rs  value.rs
featureflag/src/context/: stack.rs
featureflag/src/evaluator/: global.rs
featureflag/tests/: context.rs  feature.rs  known_features.rs
