[package]
name = "featureflag-test-macros"

description = "Test macros for featureflag crate"
version = "0.0.3"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full", "visit-mut"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
