[package]
name = "featureflag-test"
version = "0.0.1"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
featureflag = { version = "0.0.1", path = "../featureflag" }
featureflag-test-macros = { version = "0.0.1", path = "../featureflag-test-macros" }

[lints]
workspace = true

[package.metadata.docs.rs]
rustc-args = ["--all-features"]
