[package]
name = "featureflag-test"

description = "Test utilities for featureflag crate"
version = "0.0.3"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
featureflag = { version = "0.0.3", path = "../featureflag" }
featureflag-test-macros = { version = "0.0.3", path = "../featureflag-test-macros" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
