[package]
name = "featureflag"

edition = "2024"
version = "0.0.1"

[features]
default = []

feature-registry = ["dep:inventory"]
futures = ["dep:futures-core"]

[dependencies]

futures-core = { version = "0.3.31", optional = true }
inventory = { version = "0.3.20", optional = true }
thread_local = "1.1.8"

[lints]
workspace = true
